--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,23 +1,21 @@
 services:
-  # Nginx для обслуживания фронтенда и прокси к бэкенду
   nginx:
     image: nginx:1.25-alpine
     container_name: taskmanager_nginx
     ports:
       - "80:80"
       - "443:443"
+      - "5000:5000"
     volumes:
-      - ./docker/nginx/conf.d:/etc/nginx/conf.d
+      - ./docker/nginx/dev/conf.d:/etc/nginx/conf.d
       - ./backend:/var/www/backend
-      - ./frontend/dist:/var/www/frontend
-      - ./docker/nginx/ssl:/etc/nginx/ssl
+      - ./frontend:/var/www/frontend
+      # - ./docker/nginx/dev/ssl:/etc/nginx/ssl
     depends_on:
       - php
-      - node
     networks:
       - taskmanager_network
 
-  # PHP-FPM для Symfony
   php:
     build:
       context: .
@@ -25,9 +23,9 @@ services:
     container_name: taskmanager_php
     volumes:
       - ./backend:/var/www/backend
-      - ./docker/php/php.ini:/usr/local/etc/php/conf.d/custom.ini
+      # - ./docker/php/php.ini:/usr/local/etc/php/conf.d/custom.ini
     environment:
-      DATABASE_URL: "mysql://taskuser:taskpass@mysql:3306/taskmanager?serverVersion=8.0&charset=utf8mb4"
+      DATABASE_URL: "${DATABASE_URL:-mysql://taskuser:taskpass@mysql:3306/taskmanager?serverVersion=8.0&charset=utf8mb4}"
       JWT_SECRET: "${JWT_SECRET:-ChangeThisJWTSecretKey}"
       APP_ENV: "dev"
       APP_DEBUG: "1"
@@ -36,7 +34,6 @@ services:
     depends_on:
       - mysql
 
-  # MySQL база данных
   mysql:
     image: mysql:8.0
     container_name: taskmanager_mysql
@@ -50,31 +47,6 @@ services:
       - ./docker/mysql/init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "3306:3306"
-    networks:
-      - taskmanager_network
-
-  # Node.js для Vue.js разработки
-  node:
-    image: node:18-alpine
-    container_name: taskmanager_node
-    working_dir: /app
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
-    ports:
-      - "5173:5173" # Vite dev server
-    environment:
-      - VITE_API_BASE_URL=http://localhost/api
-    command: "npm run dev -- --host 0.0.0.0"
-    networks:
-      - taskmanager_network
-
-  # Redis для кеширования и будущих функций
-  redis:
-    image: redis:7-alpine
-    container_name: taskmanager_redis
-    ports:
-      - "6379:6379"
     networks:
       - taskmanager_network
 
@@ -96,9 +68,6 @@ services:
 
 volumes:
   mysql_data:
-    driver: local
-  redis_data:
-    driver: local
 
 networks:
   taskmanager_network:
