change yarn to npm, added vite

--- a/docker/nginx/dev/conf.d/default.conf
+++ b/docker/nginx/dev/conf.d/default.conf
@@ -23,3 +23,14 @@ server {
     error_log /var/log/nginx/project_error.log;
     access_log /var/log/nginx/project_access.log;
 }
+
+server {
+    listen 1000;
+    server_name localhost;
+    root /var/www/frontend/dist;
+    index index.html;
+
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
+}
