--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,23 +1,17 @@
 {
-  "name": "frontend",
-  "version": "0.0.0",
-  "private": true,
+  "name": "nuxt-app",
   "type": "module",
-  "engines": {
-    "node": "^20.19.0 || >=22.12.0"
-  },
+  "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "vue": "^3.5.18",
+    "nuxt": "^4.1.2",
+    "vue": "^3.5.21",
     "vue-router": "^4.5.1"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^6.0.1",
-    "vite": "^7.0.6",
-    "vite-plugin-vue-devtools": "^8.0.0"
   }
 }
