--- a/backend/composer.json
+++ b/backend/composer.json
@@ -14,6 +14,11 @@
         "symfony/framework-bundle": "7.3.*",
         "symfony/runtime": "7.3.*",
         "symfony/yaml": "7.3.*"
+    },    
+    "require-dev": {
+        "symfony/maker-bundle": "^1.64",
+        "symfony/stopwatch": "7.3.*",
+        "symfony/web-profiler-bundle": "7.3.*"
     },
     "config": {
         "allow-plugins": {
@@ -64,8 +69,5 @@
             "allow-contrib": false,
             "require": "7.3.*"
         }
-    },
-    "require-dev": {
-        "symfony/maker-bundle": "^1.64"
     }
 }
