created refrfesh token backend

--- a/backend/config/packages/security.yaml
+++ b/backend/config/packages/security.yaml
@@ -27,8 +27,13 @@ security:
             pattern: ^/api
             stateless: true
             jwt: ~
-    
+            # refresh_jwt: ~  # Для refresh tokens
+            refresh_jwt:
+                check_path: /api/token/refresh 
+            entry_point: jwt
+
     access_control:
         - { path: ^/api/login, roles: PUBLIC_ACCESS }
         - { path: ^/api/register, roles: PUBLIC_ACCESS }
+        - { path: ^/api/refresh, roles: PUBLIC_ACCESS }
         - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
