create icon for registration and login

--- a/docker/nginx/dev/conf.d/default.conf
+++ b/docker/nginx/dev/conf.d/default.conf
@@ -27,7 +27,7 @@ server {
 server {
     listen 1000;
     server_name localhost;
-    root /var/www/frontend/dist;
+    root /var/www/frontend/.output/public;
     index index.html;
 
     location / {
