--- a/backend/config/packages/dev/nelmio_cors.yaml
+++ b/backend/config/packages/dev/nelmio_cors.yaml
@@ -2,7 +2,7 @@ nelmio_cors:
     defaults:
         origin_regex: true
         allow_origin: ['*']
-        allow_methods: ['*']
+        allow_methods: ['GET', 'POST', 'PUT', 'PATCH', 'DELETE', 'OPTIONS']
         allow_headers: ['*']
         expose_headers: ['*']
         max_age: 3600
