--- a/backend/config/packages/dev/nelmio_cors.yaml
+++ b/backend/config/packages/dev/nelmio_cors.yaml
@@ -1,10 +1,12 @@
 nelmio_cors:
     defaults:
         origin_regex: true
-        allow_origin: ['*']
+        # allow_origin: ['*']
+        allow_origin: ['http://localhost:3000']  # Явно указываем фронтенд
         allow_methods: ['GET', 'POST', 'PUT', 'PATCH', 'DELETE', 'OPTIONS']
         allow_headers: ['*']
-        expose_headers: ['*']
+        # expose_headers: ['*']
         max_age: 3600
+        allow_credentials: true  # 🔑 КРИТИЧЕСКИ ВАЖНО!
     paths:
         '^/': null
